Update Study C docs

--- a/Assignment 2/docs/Guides/Metrics and Evaluation.tex
+++ b/Assignment 2/docs/Guides/Metrics and Evaluation.tex
@@ -606,7 +606,7 @@ def extract_claims(text):
 
 \subsection{Supplementary Metric: Flip Rate}
 
-\textbf{Source}: \citep{gichuru2026flip}
+\textbf{Source}: \citep{Chang2026flip}
 
 \textbf{Definition}: Count how many times the model was correct initially but changed its mind to be wrong after the user's input.
 
@@ -1724,8 +1724,8 @@ Compumacy (2025)
 Dai, C., Hu, J., Shi, H., Li, Z., Yang, X. and Wang, M. (2025)
 `Psyche-R1: Towards reliable psychological LLMs through unified empathy, expertise, and reasoning', \emph{arXiv preprint arXiv:2508.10848}, Available at: \url{https://arxiv.org/abs/2508.10848} (Accessed: 22 October 2025).
 
-\bibitem[Gichuru et~al.(2026)]{gichuru2026flip}
-Gichuru, R. et al. (2026)
+\bibitem[Chang et~al.(2026)]{Chang2026flip}
+Chang, R. et al. (2026)
 `Supplementary metric definition: Flip rate', \emph{arXiv preprint arXiv:2601.08258v1}, Available at: \url{https://arxiv.org/pdf/2601.08258v1} (Accessed: 28 January 2026).
 
 \bibitem[Hong et~al.(2025)Hong, Huang, Zhao and Zhang]{hong2025sycon}
